--- a/demo-frame.pug
+++ b/demo-frame.pug
@@ -3,10 +3,10 @@ html(lang="en")
 	head
 		meta(charset="UTF-8")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
-		link(rel="stylesheet", href="/frame.styl")
+		link(rel="stylesheet", href="/demo-frame.styl")
 		title
 			block title
-				= " ∴ kbtzᵈᵉᵛ Demos"
+				= " | kbtzᵈᵉᵛ"
 		block head
 	body
 		div#container
