--- a/service-rating/index.pug
+++ b/service-rating/index.pug
@@ -1,29 +1,29 @@
-extend /frame
+//- load data #[ratings, eyebox]
+extend /demo-frame
 
 block prepend title
 	| Service Rating
 
 block head
-	link(rel="stylesheet", href="service-rating.styl")
+	link(rel="stylesheet", href="index.styl")
 
 block content
 	h2 How would you rate your experience?
-
-	svg(viewBox="0 0 133 100" class="rating-good")
+	svg.rating-great(viewBox="0 0 133 100")
 		defs
 			clipPath#clip-eye #[path]
 			clipPath#clip-eyebrow #[circle(cx=35 cy=45 r=7.8)]
 			symbol#eyecomp
-				path#eyebrow(clip-path="url(#clip-eyebrow)")
 				circle#eye(clip-path="url(#clip-eye)" cx="35" cy="45" r="6.5")
+				path#eyebrow(clip-path="url(#clip-eyebrow)")
 		
 		circle#head(cx=50 cy=50 r=40)
 		g#face
 			use(href="#eyecomp")
 			use(href="#eyecomp" transform="scale(-1 1)" transform-origin="50 50")
 			path#mouth
-		
+
 		g#slider
 		
-	for rating in ratings
-		text= rating
+	//- for rating in ratings
+	//- 	b= rating
