wip service rating widget

--- a/demo-frame.styl
+++ b/demo-frame.styl
@@ -2,6 +2,7 @@ body
 	font-family: Avenir, Helvetica, Arial, sans-serif
 	-webkit-font-smoothing: antialiased
 	-moz-osx-font-smoothing: grayscale
+	background-color: #666
 
 #container
 	margin: 60px auto 0 auto
