--- a/demo-frame.styl
+++ b/demo-frame.styl
@@ -1,10 +1,9 @@
 body
-	font-family: Avenir, Helvetica, Arial, sans-serif
-	-webkit-font-smoothing: antialiased
-	-moz-osx-font-smoothing: grayscale
-	background-color: #666
+	font-family Avenir, Helvetica, Arial, sans-serif
+	-webkit-font-smoothing antialiased
+	-moz-osx-font-smoothing grayscale
 
 #container
-	margin: 60px auto 0 auto
-	border-radius: 6px
-	border: 1px solid #333
+	margin 60px auto 0 auto
+	border 1px solid #333
+	border-radius 6px
